# diffren

./: .bazelrc  CHANGELOG.md  README.md  WORKSPACE  pyproject.toml
.github/workflows/: pytest_and_autopublish.yml
diffren/: __init__.py
diffren/common/: BUILD  compare_images.py  obj_loader.py  obj_loader_test.py  test_utils.py
diffren/common/kernels/: BUILD  rasterize_test_utils.cc  rasterize_test_utils.h  rasterize_triangles_impl.cc  rasterize_triangles_impl.h  rasterize_triangles_impl_cuda.cu.cc  rasterize_triangles_impl_cuda.cu.h  rasterize_triangles_impl_cuda_test.cc  rasterize_triangles_impl_test.cc  rasterize_triangles_types.h  rasterize_utils.h
diffren/common/test_data/: BUILD  ycb_toy_airplane.mtl
diffren/jax/: BUILD  __init__.py  camera.py  camera_test.py  composite.py  constants.py  mesh_utils.py  mesh_utils_test.py  render.py  render_test.py
diffren/jax/internal/: BUILD  __init__.py  barycentrics.py  framebuffer.py  framebuffer_test.py  interpolate.py  interpolate_test.py  rasterize.py  rasterize_test.py  splat.py  splat_test.py
diffren/jax/internal/kernels/: BUILD  descriptors.proto  rasterize_triangles_cpu.cc  rasterize_triangles_gpu.cc  rasterize_triangles_xla.py  rasterize_triangles_xla_test.py
diffren/jax/utils/: BUILD  __init__.py  depthmap.py  depthmap_test.py  image.py  image_test.py  mesh.py  mesh_test.py  shaders.py  shaders_test.py  transforms.py  transforms_test.py
