[project]
name = "diffren"
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [{name = "diffren authors", email="diffren-dev@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
dependencies = [
    "absl-py",
    "chex",
    "jax",
    "flax",
    "numpy",
    "Pillow",
    "scikit-image",
    "transformations",
    "etils",
    "protobuf<4"  # Necessary to avoid "TypeError: Descriptors cannot not be created directly"
]

# This is set automatically by flit using `diffren.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-research/diffren"
repository = "https://github.com/google-research/diffren"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "yapf",
]

[build-system]
requires = ["flit_core >=3.5,<4"]
build-backend = "flit_core.buildapi"
